--- a/ios/RNPodsTest.xcodeproj/xcshareddata/xcschemes/RNPodsTest.xcscheme
+++ b/ios/RNPodsTest.xcodeproj/xcshareddata/xcschemes/RNPodsTest.xcscheme
@@ -35,8 +35,8 @@
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForTesting = "NO"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
             buildForAnalyzing = "YES">
