Consume react-native-maps through CocoaPods
This works fine

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,5 +19,6 @@ target 'RNPodsTest' do
     'RCTLinkingIOS'
   ]
   pod 'Yoga', :path => yoga_path
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 end
 
